--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Docker UI</string>
+    <string name="empty">There is no data available. Yet.</string>
+    <string name="error">An error occurred</string>
 </resources>
