Clear registry list action

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="password">Basic auth password</string>
     <string name="add_registry_title">Add registry</string>
     <string name="images_title">Images</string>
+    <string name="clear_registries">Clear registries</string>
 </resources>
